--- a/css/main-beauty-and-mind.partial.css
+++ b/css/main-beauty-and-mind.partial.css
@@ -1,20 +1,52 @@
+.beauty-and-mind {
+    background-image: url(../img/backgroud/beauty-and-mind.svg);
+    background-size: cover;
+    min-height: 623px;
+    padding-top: 60px;
+}
+
 .beauty-and-mind__content-annotation {
     font-size: 11px;
-    color: var(--annotattion-and-light-link-color);
+    color: var(--annotattion-color);
+    font-weight: 700;
+    letter-spacing: 2.2px;
 }
 
 .beauty-and-mind__content-title {
-    font-size: 41px;
+    font-size: 46px;
+    font-weight: 400;
+    padding-top: 20px;
 }
 
 .beauty-and-mind__content-text {
     font-size: 18px;
     color: var(--dark-text-color);
+    padding-top: 35px;
+    font-weight: 500;
 }
 
 .beauty-and-mind__content-link {
-    color: var(--light-title-and-link-color);
-    background-color: var(--annotattion-and-light-link-color);
+    color: var(--light-link-color);
+    background-color: var(--link-color);
     font-size: 12px;
+    font-weight: 700;
     text-decoration: none;
+    margin-top: 35px;
+}
+
+.beauty-and-mind__image {
+    margin-top: 50px;
+    padding-left: 20px;
+}
+
+@media (min-width: 768px) {
+    .beauty-and-mind .container {
+        flex-direction: row;
+        padding: 0 32px;
+        align-items: center;
+    }
+
+    .beauty-and-mind__image {
+        margin-top: 0;
+    }
 }
