--- a/css/main-studio-offers.partial.css
+++ b/css/main-studio-offers.partial.css
@@ -1,6 +1,17 @@
+.studio-offers .container {
+    margin-bottom: 60px;
+}
+
+.studio-offers__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .studio-offers__item-title {
     font-size: 22px;
     color: var(--dark-title-color);
+    font-weight: 400;
 }
 
 .studio-offers__item-text {
@@ -9,17 +20,45 @@
 
 .studio-offers__item-image {
     height: 50px;
+    margin: 30px 0 20px;
 }
 
 .studio-offers__item-line {
-    background-color: var(--transform-background-and-list-and-line-color);
+    background-color: var(--line-color);
+    margin: 15px 0;
 }
 
 .stretch-line,
 .progress-line {
-    background-color: var(--pricing-background-and-line-stretch-progress-color);
+    background-color: var(--line-stretch-progress-color);
 }
 
 .meditate-line {
     background-color: var( --meditate-line-color);
+}
+
+@media (min-width: 768px) {
+    .studio-offers .container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 32px;
+    }
+
+    .studio-offers__item {
+        padding: 0 20px;
+        max-width: 234px;
+        text-align: center;
+    }
+
+    .studio-offers__item-image {
+        height: 70px;
+    }
+}
+
+@media (min-width: 992px) {
+    .studio-offers .container {
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
 }
