--- a/css/controls.css
+++ b/css/controls.css
@@ -5,4 +5,8 @@
     justify-content: center;
     align-items: center;
     letter-spacing: 1.2px;
+    font-size: 12px;
+    font-weight: 700;
+    text-decoration: none;
+    margin-top: 35px;
 }
