--- a/css/main-about-us.partial.css
+++ b/css/main-about-us.partial.css
@@ -1,10 +1,17 @@
+.about-us {
+    padding: 60px 0 90px;
+}
+
 .about-header__annotation {
     color: var(--annotattion-color);
     font-size: 11px;
+    font-weight: 700;
+    letter-spacing: 2.2px;
 }
 
 .about-header__title {
     font-size: 30px;
+    padding: 20px 0 50px;
 }
 
 .about-us__main-text,
@@ -15,14 +22,33 @@
 .about-us__content-title {
     font-size: 18px;
     color: var(--title-color);
+    padding-top: 45px;
+    font-weight: 500;
+    color: var(--subtitle-color);
+}
+
+.about-us__content-text {
+    padding-top: 25px;
+}
+
+.about-us__lists-item {
+    padding-top: 60px;
+}
+
+.about-us__list {
+    list-style: none;
 }
 
 .about-us__list-title {
     color: var(--dark-list-color);
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 2.8px;
 }
 
 .about-us__list-line {
     background-color: var(--about-us-list-line-color);
+    margin: 15px 0;
 }
 
 .about-us__list-item {
