--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,47 @@
+.header {
+    padding: 30px 0;
+}
+
 .header__logo-image {
     width: 101px;
+}
+
+.header__menu,
+.header__phone {
+    display: none;
 }
 
 .header__menu-item {
     color: var(--header-color);
     text-decoration: none;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .header__phone {
     color: var(--link-color);
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.header__phone-number {
+    text-decoration: underline;
+}
+
+@media (min-width: 992px) {
+    .header .container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header__menu,
+    .header__phone {
+        display: flex;
+    }
+
+    .header__menu-item {
+        padding: 0 20px;
+    }
 }
