--- a/css/main-join-us.partial.css
+++ b/css/main-join-us.partial.css
@@ -28,24 +28,38 @@
     list-style: none;
 }
 
+.content-list__item {
+    color: var(--light-list-color);
+    padding-bottom: 16px;
+    display: flex;
+}
+
 .content-list__item-image {
     width: 20px;
     height: 24px;
-    color: black;
-    fill: black; /*rgb(203, 208, 176);*/
+    color: var(--join-list-decoration-color);
 }
 
-.content-list__item {
-    color: var(--light-list-color);
+.content-list__item-text {
+    padding-left: 10px;
 }
 
 .join-us__content-link {
     color: var(--dark-link-color);
     border: 1px solid var(--dark-link-color);
-    text-decoration: none;
     margin-top: 20px;
 }
 
 .join-us__carousel {
-    padding-top: 30px;
+    padding: 30px 0 0;
+}
+
+.join-us__carousel-photo {
+    padding: 0 15px;
+}
+
+@media (min-width: 992px) {
+    .join-us .container {
+        flex-direction: row;
+    }
 }
