--- a/css/main-news.partial.css
+++ b/css/main-news.partial.css
@@ -1,3 +1,11 @@
+.news {
+    padding: 90px 0;
+}
+
+.news__main {
+    text-align: center;
+}
+
 .news__main-annotation,
 .news__item-date {
     font-size: 11px;
@@ -6,6 +14,7 @@
 
 .news__main-title {
     font-size: 30px;
+    padding: 20px 0 25px;
 }
 
 .news__main-subtitle {
@@ -13,8 +22,33 @@
     color: var(--subtitle-color);
 }
 
+.news__content {
+    padding-top: 45px;
+}
+
+.news__container {
+    padding-left: 7px;
+    padding-right: 4px;
+}
+
+.news__list {
+    padding-top: 60px;
+}
+
+.news__list-item {
+    padding: 15px 0;
+    display: flex;
+    gap: 15px;
+}
+
+.news__list-item-content {
+    display: flex;
+    flex-direction: column;
+}
+
 .news__item-image {
     width: 70px;
+    height: 70px;
     border-radius: 50%;
 }
 
@@ -30,4 +64,43 @@
 .news__item-link {
     font-size: 11px;
     color: var(--dark-link-color);
+    align-self: flex-end;
+    font-weight: 700;
+    letter-spacing: 2.2px;
+    padding-top: 15px;
+}
+
+.news__list-line {
+    background-color: var(--news-line-color);
+    margin: 15px 0;
+    width: 100%;
+    height: 2px;
+}
+
+@media (min-width: 768px) {
+    .news__content {
+        display: flex;
+        flex-direction: row;
+        gap: 60px;
+    }
+
+    .news__container,
+    .news__list {
+        width: 50%;
+    }
+
+    .news__list {
+        padding: 0;
+    }
+
+    .news__item-image {
+        height: 120px;
+        width: 120px;
+    }
+}
+
+@media (min-width: 992px) {
+    .news__main-title {
+        font-size: 38px;
+    }
 }
