--- a/css/main-teacher-training.partial.css
+++ b/css/main-teacher-training.partial.css
@@ -1,3 +1,20 @@
+.teacher {
+    background-color: var(--teacher-background-color);
+}
+
+.teacher__photo-container {
+    margin: 0 -24px;
+    height: 226px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 0 0 15px;
+}
+
+.teacher__content {
+    padding: 90px 6px;
+}
+
 .teacher__content-annotation {
     font-size: 11px;
     color: var(--annotattion-color);
@@ -5,6 +22,7 @@
 
 .teacher__content-title {
     font-size: 30px;
+    padding: 20px 0 25px;
 }
 
 .teacher__content-subtitle {
@@ -14,6 +32,7 @@
 
 .teacher__content-text {
     color: var(--text-color);
+    padding-top: 20px;
 }
 
 .teacher__content-link {
@@ -21,4 +40,57 @@
     text-decoration: none;
     color: var(--light-link-color);
     background-color: var(--link-color);
+}
+
+@media (min-width: 768px) {
+    .teacher .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 0;
+        max-height: 789px;
+    }
+
+    .teacher__photo-container {
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        max-height: 789px;
+    }
+
+    .teacher__photo {
+        height: 100%;
+        width: auto;
+    }
+
+    .teacher__content {
+        padding: 105px 30px;
+    }
+
+    .teacher__content-title {
+        font-size: 34px;
+    }
+
+    .teacher__content-text {
+        padding-top: 25px;
+    }
+}
+
+@media (min-width: 992px) {
+    .teacher__content-title {
+        font-size: 38px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .teacher .container {
+        max-width: none
+    }
+
+    .teacher__content {
+        max-width: 600px;
+        margin-right: auto;
+    }
 }
