--- a/css/main-transform-yourself.partial.css
+++ b/css/main-transform-yourself.partial.css
@@ -1,5 +1,14 @@
+.transform-yourself {
+    padding: 30px 0 90px;
+}
+
 .transform-yourself__container {
     background-color: var(--transform-background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 47px;
 }
 
 .transform-yourself__container-image {
@@ -8,16 +17,48 @@
 
 .transform-yourself__container-title {
     font-size: 28px;
+    padding-top: 20px;
 }
 
 .transform-yourself__container-text {
     font-size: 18px;
     color: var(--transform-text-color);
+    padding-top: 25px;
 }
 
 .transform-yourself__container-link {
-    font-size: 12px;
-    text-decoration: none;
     color: var(--light-link-color);
     background-color: var(--link-color);
+}
+
+@media (min-width: 768px) {
+    .transform-yourself {
+        padding: 30px 0 110px;
+    }
+
+    .transform-yourself__container {
+        padding: 58px;
+    }
+
+    .transform-yourself__container-title {
+        font-size: 30px;
+    }
+}
+
+@media (min-width: 992px) {
+    .transform-yourself {
+        padding: 30px 0 125px;
+    }
+
+    .transform-yourself__container {
+        padding: 80px;
+    }
+
+    .transform-yourself__container-title {
+        font-size: 32px;
+    }
+
+    .transform-yourself__container-link {
+        margin-top: 40px;
+    }
 }
