--- a/css/main-yoga-is-answer.partial.css
+++ b/css/main-yoga-is-answer.partial.css
@@ -3,18 +3,51 @@
     background-size: cover;
     min-height: 475px;
     background-attachment: fixed;
+    padding: 60px 0 150px;
+    background-position: 50% 50%;
 }
 
 .yoga-is-answer__content {
     border: 2px solid;
     border-color: var(--transform-border-color);
+    padding: 31px 27px;
+    margin: 50px 0;
 }
 
 .yoga-is-answer__content-title {
     font-size: 22px;
     color: var(--light-title-color);
+    font-size: 24px;
 }
 
 .yoga-is-answer__content-text {
     color: var(--light-text-color);
+    font-size: 16px;
+}
+
+@media (min-width: 768px) {
+    .yoga-is-answer {
+        padding: 60px 0 275px;
+    }
+
+    .yoga-is-answer .container {
+        align-items: flex-end;
+    }
+
+    .yoga-is-answer__content {
+        padding: 34px 28px;
+        max-width: 40%;
+        margin: 0 0 250px;
+    }
+
+    .yoga-is-answer__content-text {
+        padding-top: 10px;
+    }
+}
+
+@media (min-width: 992px) {
+    .yoga-is-answer__content {
+        padding: 40px 30px;
+        margin: 0 0 400px;
+    }
 }
