--- a/css/header.css
+++ b/css/header.css
@@ -8,20 +8,24 @@
 
 .header__menu,
 .header__phone {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    align-items: center;
 }
 
 .header__menu-item {
     color: var(--header-color);
     text-decoration: none;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
+    padding: 10px 0;
 }
 
 .header__phone {
     color: var(--link-color);
     font-weight: 700;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .header__phone-number {
@@ -43,5 +47,10 @@
 
     .header__menu-item {
         padding: 0 20px;
+        font-size: 15px;
+    }
+
+    .header__phone {
+        font-size: 15px;
     }
 }
