--- a/css/header.css
+++ b/css/header.css
@@ -43,6 +43,8 @@
     .header__menu,
     .header__phone {
         display: flex;
+        flex-direction: row;
+        padding-top: 0;
     }
 
     .header__menu-item {
