--- a/css/header.css
+++ b/css/header.css
@@ -1,25 +1,78 @@
 .header {
+    position: relative;
+    z-index: 1;
     padding: 30px 0;
+}
+
+.header .container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header__logo-image {
     width: 101px;
 }
 
+.header__responsive-items {
+    display: none;
+}
+
+.header .responsive .header__responsive-items {
+    display: flex;
+}
+
 .header__menu,
 .header__phone {
     display: flex;
     flex-direction: column;
-    padding-top: 30px;
+    align-items: center;
+}
+
+.header__phone {
+    padding-top: 20px;
+}
+
+.header__menu-list {
+    margin: 0;
+    padding: 30px 0 0;
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
 .header__menu-item {
-    color: var(--header-color);
-    text-decoration: none;
+    list-style: none;
     font-size: 16px;
     font-weight: 500;
     padding: 10px 0;
+    align-items: center;
+}
+
+.header__menu-item a {
+    color: var(--header-color);
+    text-decoration: none;
+    position: relative;
+}
+
+.header__menu-item a:hover {
+    color: var(--header-hover-color);
+}
+
+.header__menu-item a::before {
+    content: "";
+    bottom: -5px;
+    left: 0;
+    position: absolute;
+    width: 0;
+    height: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.header__menu-item a:hover::before {
+    color: var(--header-hover-color);
+    width: 100%;
+    background-color: var(--header-hover-color);
 }
 
 .header__phone {
@@ -28,8 +81,86 @@
     font-size: 14px;
 }
 
+.header__phone p {
+    margin: 0;
+    color: var(--link-color);
+}
+
 .header__phone-number {
     text-decoration: underline;
+}
+
+.header__menu-btn {
+    display: block;
+    height: 24px;
+    width: 24px;
+}
+
+.header__menu-btn:hover {
+    opacity: 0.5;
+}
+
+.header__nav-icon {
+    display: block;
+    width: 24px;
+    height: 2px;
+    position: relative;
+    background: var(--header-burger-color);
+    cursor: pointer;
+    transition: background .2s ease-out;
+}
+
+.header__nav-icon:before,
+.header__nav-icon:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    background: var(--header-burger-color);
+    transition: all .2s ease-out;
+}
+
+.header__nav-icon:before {
+    top: 7px;
+}
+
+.header__nav-icon:after {
+    top: -7px;
+}
+
+.header.responsive .header__responsive-items {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--light-background-color);
+    top: 80px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+}
+
+.header.responsive .header__nav-menu {
+    background: var(--light-background-color);
+}
+
+.header.responsive .header__nav-icon {
+    background: transparent;
+}
+
+.header.responsive .header__nav-icon:before {
+    transform: rotate(-45deg);
+}
+
+.header.responsive .header__nav-icon:after {
+    transform: rotate(45deg);
+}
+
+.header.responsive .header__nav-icon:before,
+.header.responsive .header__nav-icon:after {
+    top: 0;
 }
 
 @media (min-width: 992px) {
@@ -40,11 +171,20 @@
         align-items: center;
     }
 
-    .header__menu,
-    .header__phone {
+    .header__menu-btn {
+        display: none;
+    }
+
+    .header__responsive-items {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .header__menu-list {
+        padding: 0;
         display: flex;
         flex-direction: row;
-        padding-top: 0;
     }
 
     .header__menu-item {
@@ -55,4 +195,13 @@
     .header__phone {
         font-size: 15px;
     }
+
+    .header__menu,
+    .header__phone {
+        display: flex;
+        flex-direction: row;
+        padding-top: 0;
+    }
+
+
 }
